[package]
name = "rust-runc"
version = "0.1.0"
authors = ["fsyncd"]
description = "A crate for consuming the runc binary in your Rust applications."
repository = "https://github.com/fsyncd/rust-runc"
license = "Apache-2.0"
edition = "2018"
exclude = ["test_fixture"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1.29"
log = "0.4.8"
libc = "0.2.65"
mio = "0.6.19"
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
tokio = "0.1.22"
tokio-process = "0.2.4"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dev-dependencies]
flate2 = "1.0.12"
tar = "0.4.26"